add translate all components

--- a/src/app/coffee-bar/coffee-bar.component.html
+++ b/src/app/coffee-bar/coffee-bar.component.html
@@ -4,11 +4,11 @@
             width="280" height="180" alt="武陵農場旅服照片" />
     </div>
     <div>
-        <strong>森林咖啡吧</strong>
-        <p>30年樹齡的柳杉矗立在旁，喝杯武陵農場特製薰衣草奶茶，與芬多精來場森林的約會！
-            <br />現場提供有蛋餅、蔥抓餅、雞絲麵、意麵、披薩(5吋)、麥克雞塊、厚片、肉包、肉粽等；熱飲有奶茶、咖啡、可可、薑母茶、花茶等。
+        <strong>{{'coffee_bar.name'|translate}}</strong>
+        <p>{{'coffee_bar.content'|translate}}
+            <br />{{'coffee_bar.product'|translate}}
         </p>
-        <br /> 專線電話：04-25901469
+        <br />{{'coffee_bar.tel'|translate}}
         <br />
         <br />
         <br />
