--- a/src/app/itinerary/itinerary.component.html
+++ b/src/app/itinerary/itinerary.component.html
@@ -1,70 +1,70 @@
 <div class="content" [@place]="isDivVisible">
-    <h1>行程建議</h1>
+    <h1>{{'itinerary.advice'|translate}}</h1>
     <div class="title">
-        兩天一夜
+        {{'itinerary.tow_days'|translate}}
     </div>
     <ul>
         <li>
-            <div>第一天</div>
+            <div>{{'itinerary.first_day'|translate}}</div>
             <p>
-                下午在南谷閒步或搭乘北谷遊園巴士導覽(自費行程每人費用150元)、蔣公行館(須搭配南谷行程)、茶園登高、參觀農莊文物館、雪霸遊客中心。
-                <br>晚間聆聽現場演奏高山音樂會(富野渡假村2樓，每晚20:30~21:30免費)、觀星活動(富野富野渡假村2樓，每晚21:30~22:30)。
+                {{'itinerary.trip_one'|translate}}
+                <br>{{'itinerary.trip_two'|translate}}
             </p>
         </li>
         <li>
             <div>
-                第二天
+                {{'itinerary.next_day'|translate}}
             </div>
             <P>
-                上午驅車至桃山瀑布健行、野餐、回程到觀魚台。下午參觀生態園、到茶莊品茗與選購紀念品。
+                {{'itinerary.trip_three'|translate}}
             </P>
         </li>
-        <div>註1：茶園步道約40分鐘。</div>
-        <div>註2：前往桃山瀑布，可將車輛停放在武陵山莊，再由山莊步行至瀑布(單趟4.3公里)來回約2.5~3小時。</div>
+        <div>{{'itinerary.note_one'|translate}}</div>
+        <div>{{'itinerary.note_two'|translate}}</div>
     </ul>
     <hr>
     <div class="title">
-        三天兩夜
+        {{'itinerary.three_days'|translate}}
     </div>
     <ul>
         <li>
-            <div>第一天</div>
+            <div>{{'itinerary.first_day'|translate}}</div>
             <p>
-                下午場區閒步或搭乘北谷遊園巴士導覽(自費行程每人費用150元)、茶園步道、參觀農莊文物館、雪霸遊客中心、台灣櫻花鉤吻鮭生態中心。
-                <br> 晚間聆聽現場演奏高山音樂會(富野渡假村2樓，每晚20:30~21:30免費)、觀星活動(富野渡假村2樓，每晚21:30~22:30)。
+                {{'itinerary.trip_four'|translate}}
+                <br>{{'itinerary.tirp_five'|translate}}
             </p>
         </li>
         <li>
             <div>
-                第二天
+                {{'itinerary.next_day'|translate}}
             </div>
             <P>
-                上午桃山瀑布森林步道接受芬多精、陰離子洗禮、觀魚台觀魚。
-                <br> 下午雪山登山口、露營區欣賞風光及享受寧靜的午后。
+                {{'itinerary.tirp_six'|translate}}
+                <br> {{'itinerary.trip_seven'|translate}}
             </P>
         </li>
         <li>
             <div>
-                第三天
+                {{'itinerary.third_day'|translate}}
             </div>
             <P>
-                上午南谷生態導覽解說、參觀生態館、蔣公行館(須搭配南谷行程)、選購紀念品等，享用中餐後賦歸。
+                {{'itinerary.trip_eight'|translate}}
             </P>
 
         </li>
     </ul>
     <hr>
     <div class="title">
-        武陵農場步道
+        {{'itinerary.trail'|translate}}
     </div>
     <ul>
         <li>
             <p>
-                選擇賞鳥步道0.95公里、茶園步道外還長1.15公里(來回約40分鐘)、賞鳥賞蝶步道2.15公里、高山植物園1.15公里、松林大道0.3km、桃山瀑布4.3公里(來回約3小時)
+                {{'itinerary.trip_ten'|translate}}
             </p>
         </li>
     </ul>
-    <div>註1：茶園步道約40分鐘。</div>
-    <div>註2：前往桃山瀑布，可將車輛停放在武陵山莊，再由山莊步行至瀑布(單趟4.3公里)來回約2.5~3小時。</div>
+    <div>{{'itinerary.note_one'|translate}}</div>
+    <div>{{'itinerary.note_two'|translate}}</div>
     <hr>
 </div>
