--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <div class="content" [@place]="isDivVisible">
-    <h1>北谷區深度導覽遊園巴士</h1>
+    <h1>{{'tour_guide.north_bus'|translate}}</h1>
     <div class="title">
-        北谷遊園巴士生態導覽 150元/人，小朋友學齡前佔位100元，不佔位免費。
+        {{'tour_guide.north_price'|translate}}
     </div>
     <div>
         <div>
@@ -10,31 +10,31 @@
         </div>
         <div class="schedule">
             <p>
-                <br/>平日:星期一至星期五
-                <br/> 上午 9:00~11:00
-                <br/> 下午14:30~16:30
+                <br/>{{'tour_guide.north_weekdays'|translate}}
+                <br/> {{'tour_guide.north_morniing'|translate}}
+                <br/> {{'tour_guide.north_afternoon'|translate}}
 
             </p>
             <p>
-                <br/> 假日:星期六至星期日
-                <br/> 暑假:星期一至星期日
-                <br/> 上午08:00~10:00；10:00~12:00
-                <br/> 下午13:30~15:30；15:30~17:30
+                <br/>{{'tour_guide.weekend'|translate}}
+                <br/> {{'tour_guide.holiday'|translate}}
+                <br/> {{'tour_guide.weekend_morning'|translate}}
+                <br/> {{'tour_guide.weekend_afternoon'|translate}}
             </p>
             <p>
-                <br/> 請提前預約，發車時段視預約狀況調整。
+                <br/> {{'tour_guide.notice'|translate}}
 
             </p>
             <p>
-                <br/> 北谷園區行程
-                <br/> 武陵賓館出發→觀魚台(櫻花鉤吻鮭)→雪山登山口→露營區森林咖啡吧 →武陵茶莊(全程約2小時)。
+                <br/> {{'tour_guide.north_program'|translate}}
+                <br/> {{'tour_guide.north_procedure'|translate}}
             </p>
         </div>
     </div>
     <hr>
-    <h1>南谷園區步行導覽解說</h1>
+    <h1>{{'tour_guide.south_waker'|translate}}</h1>
     <div class="title">
-        南谷生態導覽 免費
+        {{'tour_guide.south_price'|translate}}
     </div>
     <div>
         <div>
@@ -43,15 +43,15 @@
         </div>
         <div class="schedule">
             <p>
-                藉由解說員生動活潑導覽介紹，讓每位遊客徜徉在青山綠水的大自然懷抱下，同時能了解大自然生態之美，豐富您優質的遊程。
+                {{'tour_guide.south_guide'|translate}}
             </p>
             <p>
-                <br/>上午08:30 ~ 10:30
-                <br/>下午14:30 ~ 16:30
+                <br/>{{'tour_guide.south_morning'|translate}}
+                <br/>{{'tour_guide.south_afternoon'|translate}}
             </p>
             <p>
-                <br/> 南谷園區行程
-                <br/> 武陵賓館出發→迎賓橋→賞鳥步道→松林大道→蔣公行館→武陵茶莊(全程步行，約2小時)。
+                <br/> {{'tour_guide.south_program'|translate}}
+                <br/> {{'tour_guide.south_procedure'|translate}}
             </p>
         </div>
         <hr>
