--- a/src/app/visitor-center/visitor-center.component.html
+++ b/src/app/visitor-center/visitor-center.component.html
@@ -5,9 +5,9 @@
     </div>
     <div >
         <strong>{{'visitor_center.name'|translate}}</strong>
-        <p>武陵農場旅遊服務中心主要販賣日常用品(拖鞋、牙膏等)與大眾食品(餅乾、飲料、農特產品等)。
-            <br/>假日提供雞絲麵、貢丸湯、關東煮、肉粽等熱食
-            <br/>營業時間:  每日 07:00~19:00
+        <p>{{'visitor_center.content'|translate}}
+            <br/>{{'visitor_center.product'|translate}}
+            <br/>{{'visitor_center.open'|translate}}
         </p>
         <br /> {{'visitor_center.tel'|translate}}
         <br /> {{'visitor_center.fax'|translate}}
