--- a/src/app/announce/long-stay/long-stay.component.scss
+++ b/src/app/announce/long-stay/long-stay.component.scss
@@ -11,7 +11,7 @@
     width: calc(100% - 16px);
     height: 376px;
     margin: 8px;
-    background : linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.9) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Flong-stay%2Flong-stay-big.jpg?alt=media&token=c4b60ab6-5343-41c4-9bc5-fd809ae42801);    
+    background : linear-gradient(to bottom right, rgba(255, 255, 255, .4) 0%, rgba(255, 255, 255, .4) 80%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Flong-stay%2Flong-stay-big.jpg?alt=media&token=c4b60ab6-5343-41c4-9bc5-fd809ae42801);    
     background-size: cover;
   }
   
@@ -19,7 +19,7 @@
     max-width: 460px;
     bottom: 40px;
     right: 60px;
-    position: absolute;
+    position: absolute;    
     z-index: 40;
   }
   
