--- a/src/app/tea-shop/tea-shop.component.html
+++ b/src/app/tea-shop/tea-shop.component.html
@@ -4,8 +4,8 @@
     </div>
     <div>
         <strong>{{'tea_saloon.name'|translate}}</strong>
-        <p>武陵農場茶莊主要販賣以茶葉及農特產品為主，並有一些熱食提供。且提供喜愛泡茶喝的遊客，有一專屬泡茶空間，享受這自然環境孕育出來天然茶葉帶來的香韻潤喉滋味。
-           <br/> 營業時間:  每日 07:30~18:00；寒、暑假及櫻花季期間每日07:00~18:30            
+        <p>{{'tea_saloon.content'|translate}}
+           <br/>{{'tea_saloon.open'|translate}}          
         </p>
         <br /> {{'tea_saloon.tel'|translate}}
         <br />{{'tea_saloon.fax'|translate}}
