--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-dashboard></app-dashboard>
 
+<!-- <i class="fa fa-facebook-official"></i>
+<i class="fa fa-facebook-official" style="font-size:24px"></i>
+<i class="fa fa-facebook-official" style="font-size:36px"></i>
+<i class="fa fa-facebook-official" style="font-size:48px;color:red"></i> -->
