--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar color="primary">
     <div style="font-size: 12px;">
-            <a href="https://docs.google.com/document/d/1WBJwhB2F3M2n7wUPZzj-5HufyyI1qyRwnxMPBQVDLDQ/edit?usp=sharing" style="text-decoration:none; color:white">測試用（開發中）</a>
-        
+        <a href="https://docs.google.com/document/d/1WBJwhB2F3M2n7wUPZzj-5HufyyI1qyRwnxMPBQVDLDQ/edit?usp=sharing"
+            style="text-decoration:none; color:white">測試用（開發中）</a>
+
         <!-- <button mat-icon-button (click)="onToggleLeftnav()">
             <mat-icon>menu</mat-icon>
         </button> -->
@@ -9,6 +10,11 @@
     <div class="seprator"></div>
     <div>
         <ul>
+            <li>
+                <a href="https://www.facebook.com/WulingFarm0510">
+                    <i class="fa fa-facebook-official" style="font-size:24px; color:white ;margin: 10px "></i>
+                </a>
+            </li>
             <li>
                 <button mat-icon-button>
                     <mat-icon>home</mat-icon>
@@ -27,11 +33,14 @@
                     <mat-icon>shopping_cart</mat-icon>
                 </button>
             </li>
-            <li>
+            <!-- <li>
                 <button mat-icon-button (click)="onToggleRightnav()">
                     <mat-icon>person</mat-icon>
                 </button>
-            </li>
+                 
+              
+            </li> -->
+
         </ul>
     </div>
 </mat-toolbar>
