repair thia langauge

--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -16,9 +16,9 @@
                 </a>
             </li>
             <li>
-                <button mat-icon-button>
-                    <mat-icon>home</mat-icon>
-                </button>
+                <a href="https://dorado-project.firebaseapp.com/home">
+                    <mat-icon style="font-size:24px; color:white ;margin: 10px ">account_balance</mat-icon>
+                </a>
             </li>
             <li>
                 <button mat-icon-button [matMenuTriggerFor]="m">
