adject small screen to big screen can't recover

--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -150,7 +150,7 @@
             </div>
         </div>
         <!-- 會議室 -->
-        <div id="meeting-room" class="box offer" (click)="onClick('meeting-room','meeting-content')">
+        <div id="meeting" class="box offer" (click)="onClick('meeting-room','meeting-content')">
             <div class="meeting-room">
                 <div class="title">{{'home.meeting_room'|translate}} </div>
                 <div> </div>
