repair thi langauge

--- a/src/app/restaurant/restaurant.component.html
+++ b/src/app/restaurant/restaurant.component.html
@@ -45,8 +45,8 @@
                 {{'restaurant.family_style'|translate}}
             </div>
             <div>
-                {{'restaurant.lunch'|translate}} 11:30~14:00　
-                <br/> {{'restaurant.dinner'|translate}} 17:30~20:00
+                {{'restaurant.lunch'|translate}} 
+                <br/> {{'restaurant.dinner'|translate}}  
             </div>
             <ul>
                 <li>
@@ -97,14 +97,7 @@
                 <li>
                     <div> {{'restaurant.buffet_price'|translate}} </div>
                     <div> {{'restaurant.location_hotel'|translate}} </div>   
-                </li>
-                <li>
-                    <div> {{'restaurant.buffet_note'|translate}} </div>                 
-
-                </li>
-                 
-                    
-                 
+                </li>          
             </ul>
         </div>
     </div>
