--- a/src/app/tea-shop/tea-shop.component.html
+++ b/src/app/tea-shop/tea-shop.component.html
@@ -5,11 +5,9 @@
     <div>
         <strong>{{'tea_saloon.name'|translate}}</strong>
         <p>{{'tea_saloon.content'|translate}}
-           <br/>{{'tea_saloon.open'|translate}}          
-        </p>
-        <br /> {{'tea_saloon.tel'|translate}}
-        <br />{{'tea_saloon.fax'|translate}}
-        <br /> {{'tea_saloon.address'|translate}}
+           <br/>{{'tea_saloon.open'|translate}}  
+           <br/>{{'tea_saloon.holiday'|translate}}         
+        </p>       
         <br />
         <br />
         <br />
