replace english json file

--- a/src/app/hotel/hotel.component.html
+++ b/src/app/hotel/hotel.component.html
@@ -148,7 +148,7 @@
               </tr>
             </table>
             <h4>{{'wuling-hotel.note'|translate}}</h4>
-            <p>6{{'wuling-hotel.four_mattresses'|translate}}</p>
+            <p>{{'wuling-hotel.six_mattresses'|translate}}</p>
           </article>
           <mat-divider [inset]="true"></mat-divider>
           <h4>
@@ -364,7 +364,7 @@
               </tr>
             </table>
             <h4>{{'wuling-hotel.note'|translate}}</h4>
-            <p> 4{{'wuling-hotel.four_mattresses'|translate}}</p>
+            <p> {{'wuling-hotel.four_mattresses'|translate}}</p>
           </article>
           <mat-divider [inset]="true"></mat-divider>
         </mat-expansion-panel>
