--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 
 html, body{
     /* font-family:'cwTeXKai', sans-serif; */
-    font-family: 'Noto Sans TC','Roboto', Verdana, Arial, Helvetica, sans-serif;  
+    font-family: 'Noto Sans TC','Roboto', 'Rounded Mplus 1c', Verdana, Arial, Helvetica, sans-serif;  
     font-size: 15px;
     line-height: 25px;   
     height: 100%;
