--- a/src/app/dashboard/main/main.component.scss
+++ b/src/app/dashboard/main/main.component.scss
@@ -25,7 +25,7 @@
     cursor: pointer;
     box-shadow: 8px 8px 8px #ccc;
     font-size:large;
-    text-shadow: 2px 2px 1px white ,-2px -2px 1px white ,-2px 2px 1px white  ,2px -2px 1px white;;
+    text-shadow: 2px 2px 1px white ,-2px -2px 1px white ,-2px 2px 1px white  ,2px -2px 1px white;
   }
 
   .status {
