--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -26,7 +26,7 @@
     <hr>
     <div>
         <div>
-            <img class="leftside" src="https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/product%2Fpic-03.jpg?alt=media&token=d066aacb-d67c-40e3-b5ab-074c2c1eb968" alt="">
+            <img class="leftside" src="https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/product%2Fmun.jpg?alt=media&token=a9a61813-0cf5-49c3-b43b-0a269d932919" alt="">
         </div>
         <div class="title">
             {{'agricultural.souvenirs'|translate}}
