--- a/src/app/announce/long-stay/long-stay.component.scss
+++ b/src/app/announce/long-stay/long-stay.component.scss
@@ -11,13 +11,14 @@
     width: calc(100% - 16px);
     height: 376px;
     margin: 8px;
-    background : linear-gradient(to bottom right, rgba(255, 255, 255, .4) 0%, rgba(255, 255, 255, .4) 80%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Flong-stay%2Flong-stay-big.jpg?alt=media&token=c4b60ab6-5343-41c4-9bc5-fd809ae42801);    
+    background : linear-gradient(to bottom right, rgba(255, 255, 255, .2) 0%, rgba(255, 255, 255, .2) 80%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Flong-stay%2Fpeach-big.jpg?alt=media&token=48e9878c-9d5d-4036-97e3-38682ae4f896);    
     background-size: cover;
+    text-shadow: 2px 2px 2px white ,-2px -2px 2px white ,-2px 2px 2px white ,2px -2px 2px white;
   }
   
   .slogan {
     max-width: 460px;
-    bottom: 40px;
+    bottom: 20px;
     right: 60px;
     position: absolute;    
     z-index: 40;
@@ -56,24 +57,23 @@
   
   @media only screen and (max-width:480px) {
     .content {      
-      background : linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Flong-stay%2Flong-stay-small.jpg?alt=media&token=ee62576e-f2c5-4d90-a326-209740bd3485);
+      background : linear-gradient(to bottom right, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Flong-stay%2Fpeach-small.jpg?alt=media&token=4090df96-b855-4b34-b8bc-eab30e5ca90e);
       background-size: cover;
     }
     .slogan {
       width:calc(100%-20px);
-      bottom: 40px;
+      bottom: 20px;
       right: 4px;
-      left: 4px;
-      
+      left: 4px;     
     }
     h1{
-      font-size: 20px;
+      font-size: 16px;
     }
     .article {        
-      margin: 8px;
+      margin: 8px;     
     }  
     .contain {   
-      font-size: 16px;
+      font-size: 12px;
       margin: 8px;
        
     }
