--- a/src/app/announce/long-stay/long-stay.component.scss
+++ b/src/app/announce/long-stay/long-stay.component.scss
@@ -13,7 +13,7 @@
     margin: 8px;
     background : linear-gradient(to bottom right, rgba(255, 255, 255, .2) 0%, rgba(255, 255, 255, .2) 80%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Flong-stay%2Fpeach-big.jpg?alt=media&token=48e9878c-9d5d-4036-97e3-38682ae4f896);    
     background-size: cover;
-    text-shadow: 2px 2px 2px white ,-2px -2px 2px white ,-2px 2px 2px white ,2px -2px 2px white;
+    text-shadow: 0 0 .8em white ,0 0 .8em white ,0 0 .8em  white,0 0 .8em white ,0 0 .8em  white;
   }
   
   .slogan {
@@ -26,6 +26,7 @@
   
   .article {
     text-align: left;
+    line-height: 32px  
   }
   
   .contain {
