--- a/src/app/announce/peach/peach.component.scss
+++ b/src/app/announce/peach/peach.component.scss
@@ -17,8 +17,8 @@
   }
   
   .slogan {
-    max-width: 460px;
-    bottom: 20px;
+    max-width: 640px;
+    bottom: 10px;
     right: 60px;
     position: absolute;    
     z-index: 40;
@@ -31,6 +31,7 @@
   
   .contain {
     text-align: left;
+    line-height: 20px ;
     margin: 8px;
   }
   
