clean old traffic component

--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -5,11 +5,12 @@
         </div>
     </div>
     <div class="content">
-        <div class="box status weather">
-            <app-weather-station></app-weather-station>
+            <h3 class="article">  {{'traffic.road_status'|translate}}</h3>
+        <div class="box status weather">          
+            <app-highway></app-highway>
         </div>
         <div class="box status traffic">
-                <app-traffic-status></app-traffic-status>
+                
         </div>
     </div>
 
@@ -191,3 +192,5 @@
 
     </div>
 </div>
+
+ 
