--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -10,7 +10,8 @@
             <app-highway></app-highway>
         </div>
         <div class="box status traffic">
-                
+               <app-camera></app-camera> 
+               <app-weather-station></app-weather-station>
         </div>
     </div>
 
