adject camera size and alt message when borwser not support

--- a/src/app/real-time/camera/camera.component.html
+++ b/src/app/real-time/camera/camera.component.html
@@ -1,1 +1,1 @@
-<img class="camera" src="http://210.241.53.147/abs2mjpg/mjpg?camera=2&resolution=352x240&1517643179519">
+<img class="camera" src="http://210.241.53.147/abs2mjpg/mjpg?camera=2&resolution=352x240&1517643179519" alt="Your browser does not support the video element.">
