--- a/src/app/hotel/hotel.component.scss
+++ b/src/app/hotel/hotel.component.scss
@@ -2,6 +2,11 @@ mat-card{
     text-align: left;   
 }
 
+div{
+    -ms-overflow-style: none;
+    overflow: auto;
+}
+
 img{
     float: left;
     margin: 20px 8px;
