adject define langauge to zh-tw

--- a/src/app/dashboard/main/main.component.scss
+++ b/src/app/dashboard/main/main.component.scss
@@ -67,7 +67,7 @@
     background-image: linear-gradient( to bottom right, #D3D3D3 30%, #F0F0F0  100%);
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: darksalmon;
+    // background-color: darksalmon;
     height: 256px;
   }
 
