--- a/src/app/real-time/camera/camera.component.scss
+++ b/src/app/real-time/camera/camera.component.scss
@@ -6,11 +6,10 @@
     vertical-align: top; 
     overflow-y:auto;  
     -ms-overflow-style: none;
-    overflow: auto;
-    min-height: 250px
+    overflow: auto;     
 }
 
 img{
-    max-width:calc(100% - 20px);
-    max-height:100%;
+    max-width:calc(100% - 20px);    
+    max-height: 80px
 }
