--- a/src/app/real-time/camera/camera.component.scss
+++ b/src/app/real-time/camera/camera.component.scss
@@ -13,3 +13,8 @@ img{
     max-width:calc(100% - 20px);    
     max-height: 80px
 }
+
+.big{
+    max-width:calc(100% - 20px);     
+    max-height: 100%
+}
