--- a/src/app/hotel/hotel.component.html
+++ b/src/app/hotel/hotel.component.html
@@ -4,6 +4,7 @@
       <p>
         {{'wuling-hotel.introduction'|translate}}
       </p>
+      <a mat-raised-button color="primary" href="https://wuling-sakura-01.azurewebsites.net/" target="_blank"> {{'wuling-hotel.order'|translate}}</a>
       <mat-accordion>
         <mat-expansion-panel>
           <mat-expansion-panel-header>
@@ -11,12 +12,12 @@
               <mat-icon>hotel</mat-icon>
             </mat-panel-title>
             <mat-panel-description>
-              {{'wuling-hotel.wuling_hotel'|translate}} 
+              {{'wuling-hotel.wuling_hotel'|translate}}
             </mat-panel-description>
           </mat-expansion-panel-header>
           <h4>
             <button mat-raised-button (click)="openMap(24.345592,121.308265)">
-              {{'wuling-hotel.creek_building'|translate}} 
+              {{'wuling-hotel.creek_building'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -50,7 +51,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <h4>
             <button mat-raised-button (click)="openMap(24.346154, 121.308263)">
-              {{'wuling-hotel.honeymoon_suite'|translate}} 
+              {{'wuling-hotel.honeymoon_suite'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -84,7 +85,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <h4>
             <button mat-raised-button (click)="openMap(24.346154, 121.308263)">
-              {{'wuling-hotel.family_suite'|translate}} 
+              {{'wuling-hotel.family_suite'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -119,7 +120,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <h4>
             <button mat-raised-button (click)="openMap(24.346154, 121.308263)">
-              {{'wuling-hotel.japanese_style'|translate}} 
+              {{'wuling-hotel.japanese_style'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -153,7 +154,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <h4>
             <button mat-raised-button (click)="openMap(24.345069, 121.308203)">
-              {{'wuling-hotel.maple_cottage'|translate}} 
+              {{'wuling-hotel.maple_cottage'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -194,12 +195,12 @@
               <mat-icon>hotel</mat-icon>
             </mat-panel-title>
             <mat-panel-description>
-              {{'wuling-hotel.leisure_farm_villa'|translate}} 
+              {{'wuling-hotel.leisure_farm_villa'|translate}}
             </mat-panel-description>
           </mat-expansion-panel-header>
           <h4>
             <button mat-raised-button (click)="openMap(24.350666, 121.310016)">
-              {{'wuling-hotel.peach_double'|translate}} 
+              {{'wuling-hotel.peach_double'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -233,7 +234,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <h4>
             <button mat-raised-button (click)="openMap(24.350666, 121.310016)">
-              {{'wuling-hotel.peach_quadruple'|translate}} 
+              {{'wuling-hotel.peach_quadruple'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -267,7 +268,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <h4>
             <button mat-raised-button (click)="openMap(24.355179, 121.311531)">
-              {{'wuling-hotel.wunkang_big'|translate}} 
+              {{'wuling-hotel.wunkang_big'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -301,7 +302,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <h4>
             <button mat-raised-button (click)="openMap(24.355179, 121.311531)">
-              {{'wuling-hotel.wunkang_small'|translate}} 
+              {{'wuling-hotel.wunkang_small'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -335,7 +336,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <h4>
             <button mat-raised-button (click)="openMap(24.355179, 121.311531)">
-              {{'wuling-hotel.wunkang_japenese'|translate}} 
+              {{'wuling-hotel.wunkang_japenese'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -376,12 +377,12 @@
               <mat-icon>hotel</mat-icon>
             </mat-panel-title>
             <mat-panel-description>
-              {{'wuling-hotel.shanshui_villa'|translate}} 
+              {{'wuling-hotel.shanshui_villa'|translate}}
             </mat-panel-description>
           </mat-expansion-panel-header>
           <h4>
             <button mat-raised-button (click)="openMap(24.353238, 121.311310)">
-              {{'wuling-hotel.salmon_room'|translate}} 
+              {{'wuling-hotel.salmon_room'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -415,7 +416,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <h4>
             <button mat-raised-button (click)="openMap(24.353238, 121.311310)">
-              {{'wuling-hotel.peach_room'|translate}} 
+              {{'wuling-hotel.peach_room'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -449,7 +450,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <h4>
             <button mat-raised-button (click)="openMap(24.353238, 121.311310)">
-              {{'wuling-hotel.maple_room'|translate}} 
+              {{'wuling-hotel.maple_room'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -483,7 +484,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <h4>
             <button mat-raised-button (click)="openMap(24.353430, 121.311409)">
-              {{'wuling-hotel.apple_Plum'|translate}} 
+              {{'wuling-hotel.apple_Plum'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
@@ -517,7 +518,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <h4>
             <button mat-raised-button (click)="openMap(24.353238, 121.311310)">
-              {{'wuling-hotel.cherry_room'|translate}} 
+              {{'wuling-hotel.cherry_room'|translate}}
               <mat-icon>location_on</mat-icon>
             </button>
           </h4>
