add wuling logo

--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar color="primary">
     <div style="font-size: 12px;">
-        <a href="https://docs.google.com/document/d/1WBJwhB2F3M2n7wUPZzj-5HufyyI1qyRwnxMPBQVDLDQ/edit?usp=sharing"
-            style="text-decoration:none; color:white">測試用（開發中）</a>
+        <img class="logo" src="https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/toolbar%2Flogo.jpg?alt=media&token=41348d38-9f34-4d93-8fdf-5c9f35fdb32d" alt="Wuling farm">
+        <!-- <a href="https://docs.google.com/document/d/1WBJwhB2F3M2n7wUPZzj-5HufyyI1qyRwnxMPBQVDLDQ/edit?usp=sharing"
+            style="text-decoration:none; color:white">測試用（開發中）</a> -->
 
         <!-- <button mat-icon-button (click)="onToggleLeftnav()">
             <mat-icon>menu</mat-icon>
