adject convert sheme timing

--- a/src/app/announce/peach/peach.component.scss
+++ b/src/app/announce/peach/peach.component.scss
@@ -9,9 +9,9 @@
   position: relative;
     display: inline-block;
     width: calc(100% - 16px);
-    height: 376px;
+    height: 380px;
     margin: 8px;
-    background : linear-gradient(to bottom right, rgba(255, 255, 255, 0.1) 30%, rgba(255, 255, 255, .3) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Fpeach%2Fpeach-big.jpg?alt=media&token=829a4ad8-6dc2-4efd-85d1-418fd0ba9815);    
+    background : linear-gradient(to bottom right, rgba(255, 255, 255, 0) 30%, rgba(255, 255, 255, 0) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/announce%2Fpeach%2Fpeach-big.jpg?alt=media&token=57c53610-a84a-4045-b2ff-b9162357c093);    
     background-size: cover;
     text-shadow: 0 0 .8em white ,0 0 .8em white ,0 0 .8em  white,0 0 .8em white ,0 0 .8em  white;
   }
