--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -17,17 +17,17 @@
                 </a>
             </li>
             <li>
-                <a href="https://dorado-project.firebaseapp.com/home">
-                    <mat-icon style="font-size:24px; color:white ;margin: 10px ">account_balance</mat-icon>
-                </a>
-            </li>
-            <li>
                 <button mat-icon-button [matMenuTriggerFor]="m">
                     <mat-icon>translate</mat-icon>
                 </button>
                 <mat-menu #m="matMenu">
                     <button #b [id]="language.code" mat-menu-item *ngFor="let language of languages" (click)="languageSelected(language)">{{language.display}}</button>
                 </mat-menu>
+            </li>
+            <li>
+                <a href="https://s3.wuling-farm.com.tw/home">
+                    <mat-icon style="font-size:24px; color:white ;margin: 10px ">account_balance</mat-icon>
+                </a>
             </li>
             <!-- <li>
                 <button mat-icon-button>
