--- a/src/app/real-time/camera/camera.component.scss
+++ b/src/app/real-time/camera/camera.component.scss
@@ -18,3 +18,20 @@ img{
     max-width:calc(100% - 20px);     
     max-height: 100%
 }
+
+@media only screen and (max-width:1200px) {
+   
+}
+@media screen and (max-width:1023px) {
+
+}
+@media only screen and (max-width:768px) {
+
+}
+@media only screen and (max-width:480px) {
+    img{
+      
+        max-width:calc(100% - 20px);    
+        max-height: 60px
+    } 
+}
