--- a/src/app/real-time/highway/highway.component.scss
+++ b/src/app/real-time/highway/highway.component.scss
@@ -1,9 +1,7 @@
 :host{   
     display: inline-block; 
-    width: calc(100% - 12px);
-  
-    height:200px;    
-    //border: 1px solid lightblue;   
+    width: calc(100% - 12px);  
+    height:200px;           
     text-align: left;     
     margin: 6px;
     vertical-align: top; 
@@ -34,5 +32,9 @@ div{
 
 }
 @media only screen and (max-width:480px) {
-       
+    :host{    
+        width: 100% ;     
+        height:160px; 
+        margin: 0;       
+    }    
 }
