auto hidden the booking buttom when the langauge is not chinese

--- a/src/app/campsite/campsite.component.scss
+++ b/src/app/campsite/campsite.component.scss
@@ -49,6 +49,15 @@ td{
   background-color: #FFFFFF;     
 }
 
+.order{
+  visibility:visible;
+}
+
+.notChinese{
+   
+  visibility: hidden;
+}
+
 @media screen and (max-width:1023px) {
   gallery, img{     
     max-height: 200px;
