--- a/src/app/hotel/hotel.component.html
+++ b/src/app/hotel/hotel.component.html
@@ -4,7 +4,7 @@
       <p>
         {{'wuling-hotel.introduction'|translate}}
       </p>
-      <a mat-raised-button color="primary" href="https://wuling-sakura-01.azurewebsites.net/" target="_blank"> {{'wuling-hotel.order'|translate}}</a>
+      <a class="booking" mat-raised-button color="primary" href="https://wuling-sakura-01.azurewebsites.net/" target="_blank"> {{'wuling-hotel.order'|translate}}</a>
       <mat-accordion>
         <mat-expansion-panel>
           <mat-expansion-panel-header>
