add auth and database service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <app-dashboard></app-dashboard>
- 
+<a href="#" class="btn btn-gray btn-animated" (click)="logout()" >log out</a>
+<a href="#" class="btn btn-gray btn-animated" (click)="state()" >state</a>
+<a href="#" class="btn btn-gray btn-animated" (click)="isLogin()" >isLogin</a>
+<a href="#" class="btn btn-gray btn-animated" (click)="logWithFacebook()" >login with facebook</a>
+<a href="#" class="btn btn-gray btn-animated" (click)="setData()" >set</a>
+<a href="#" class="btn btn-gray btn-animated" (click)="update()" >update</a>
+<a href="#" class="btn btn-gray btn-animated" (click)="delete()" >delete</a>
+<a href="#" class="btn btn-gray btn-animated" (click)="fetch()" >fetch</a>
